--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
     <!-- SD卡读取权限，用户写入离线定位数据-->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
+    <!--手机震动-->
+    <uses-permission android:name="android.permission.VIBRATE" />
+
 
     <application
         android:name=".app.AppContext"
@@ -43,15 +46,15 @@
         <activity
             android:name=".ui.activity.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
-
-
-        </activity>
-        <activity android:name=".ui.activity.ChooseSiteActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity android:name=".ui.activity.ChooseSiteActivity">
+
         </activity>
 
 
