--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,25 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fengniao.remind">
 
-    <!--百度地图权限-->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--允许程序打开网络套接字-->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.GET_TASKS" />
+    <!--允许程序设置内置sd卡的写权限-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-
-    <!-- 这个权限用于进行网络定位-->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- 这个权限用于访问GPS定位-->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!-- 用于读取手机当前的状态-->
+    <!--允许程序获取网络状态-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--允许程序访问WiFi网络信息-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!--允许程序读写手机状态和身份-->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <!-- SD卡读取权限，用户写入离线定位数据-->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <!--允许程序访问CellID或WiFi热点来获取粗略的位置-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
 
     <!--手机震动-->
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -34,14 +28,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+
+        <!--######################高的地图#########################-->
+
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="d7a5c138c9ee2a5053900a9a6a8c3fe3" />
+
+        <!-- 定位需要的服务 使用2.0的定位需要加上这个 -->
+        <service android:name="com.amap.api.location.APSService"></service>
+
+
+        <!--######################################################-->
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="86jO5Li1FH5ZuYK1PsGrUziHij92RM72" />
 
-        <service
-            android:name="com.baidu.location.f"
-            android:enabled="true"
-            android:process=":remote" />
 
         <activity
             android:name=".ui.activity.MainActivity"
@@ -60,19 +63,24 @@
 
         <service
             android:name=".service.RemindService"
-            android:enabled="true">
+            android:enabled="true"
+            android:process=":remind" />
 
-        </service>
+        <!--守护进程-->
+        <service
+            android:name=".service.ProtectService"
+            android:enabled="true"
+            android:process=":protect" />
 
         <!--监听广播，拉起service-->
-        <!--<receiver android:name=".service.ProtectRemindReceiver">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="com.fengniao.reciver.protect" />-->
-                <!--<action android:name="android.intent.action.BOOT_COMPLETED" />-->
-                <!--<action android:name="android.intent.action.USER_PRESENT" />-->
-                <!--<action android:name="android.intent.action.PACKAGE_RESTARTED" />-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
+        <receiver android:name=".reciver.ProtectReceiver">
+            <intent-filter>
+                <action android:name="com.fengniao.reciver.protect" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="android.intent.action.PACKAGE_RESTARTED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 
